--- a/works.html
+++ b/works.html
@@ -37,7 +37,7 @@
                       <use xlink:href="assets/img/sprite/sprite.svg#hamburger"></use>
                     </svg>
           </div>
-          <div class="header__title_transparent"><img src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
+          <div class="header__title_transparent"><img class="title_image_transparent" src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
           <div class="login-box login-box__bg_transparent">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
           </div><a class="arrow-scroll_header_down" href="#">
@@ -118,7 +118,7 @@
                     <svg class="arrow__up">
                       <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
                     </svg></a>
-          <footer class="footer footer_position_absolute">
+          <footer class="footer footer_flex">
             <div class="footer__row">
               <nav class="footer__nav">
                 <ul class="footer__list">
