--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
             </ul>
           </div>
         </section>
-        <section class="section section_height_100vh section__map">
+        <section class="section section_height_100vh section_map">
           <div class="contacts_wrap">
             <div class="contacts login-box">
               <div class="title text_font_35"><span class="title__text">Контакты</span></div>
