--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
           <div class="login-box login-box__welcome">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title text_size_28">Андрей Секачев</span><span class="login-box__subtitle">Личный сайт веб разработчика</span>
             <ul class="socials login-box__socials socials_color_cyan">
-              <li class="socials__item social__item_welcome"><a class="socials__link" href="#">
+              <li class="socials__item socials__item_welcome"><a class="socials__link" href="#">
                       <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
                       </svg></a></li>
-              <li class="socials__item social__item_welcome"><a class="socials__link" href="#">
+              <li class="socials__item socials__item_welcome"><a class="socials__link" href="#">
                       <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
                       </svg></a></li>
-              <li class="socials__item social__item_welcome"><a class="socials__link" href="#">
+              <li class="socials__item socials__item_welcome"><a class="socials__link" href="#">
                       <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
                       </svg></a></li>
