--- a/works.html
+++ b/works.html
@@ -77,11 +77,11 @@
             </div>
           </div>
         </section>
-        <div class="title text_font_63 text_align_center text__mb_15"><span class="title__text">Что обо мне<br> говорят </span></div>
-        <section class="section section__feedback">     
+        <div class="title text_font_63 text_align_center text_mb_15"><span class="title__text">Что обо мне<br> говорят </span></div>
+        <section class="section section_feedback">     
           <ul class="feedback__list">
             <li class="feedback__item">
-              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
+              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.png" alt="quotes icon"></div>
               <div class="feedback__text">
                 <p>Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!</p>
               </div>
@@ -91,7 +91,7 @@
               </div>
             </li>
             <li class="feedback__item">
-              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
+              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.png" alt="quotes icon"></div>
               <div class="feedback__text">
                 <p>Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!</p>
               </div>
