--- a/works.html
+++ b/works.html
@@ -60,6 +60,18 @@
             </nav>
           </div>
         </header>
+        <div class="fullscreen-menu">
+          <div class="fullscreen-menu__bg fullscreen-menu__bg_left"></div>
+          <div class="fullscreen-menu__bg fullscreen-menu__bg_right"></div>
+          <nav class="fullscreen-menu__nav">
+            <ul class="hide-menu__list">
+              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/works.html"><span class="title__text text_color_white">Мои работы</span></a></li>
+              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/about.html"><span class="title__text text_color_white">Обо мне</span></a></li>
+              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/blog.html"><span class="title__text text_color_white">Блог</span></a></li>
+              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/index.html"><span class="title__text text_color_white">Авторизация</span></a></li>
+            </ul>
+          </nav>
+        </div>
         <section class="section section_works">
           <div class="my-works">
             <div class="title text_font_63 text_align_center"><span class="title__text text_line-height_184">Мои работы</span></div>
