--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <div class="maincontent">
         <header class="header">
-          <div class="header__bg"></div>
+          <div class="header__bg" id="header__bg"></div>
           <div class="header__top-line">
             <ul class="socials text_color_rgba-white">
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
@@ -36,27 +36,27 @@
             </ul>
             <div class="hamburger"><span class="hamburger__line"></span><span class="hamburger__line"></span><span class="hamburger__line"></span></div>
           </div>
-          <div class="header__title_transparent"><img class="title_image_transparent" src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
-          <div class="login-box login-box__bg_transparent">
+          <div class="header__title_transparent"><img class="title_image_transparent" id="title_image_transparent" src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
+          <div class="login-box login-box__bg_transparent" id="login-box">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
           </div><a class="arrow-scroll_header_down" href="#">
                     <svg class="arrow-scroll_header">
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
-          <svg class="triangles triangles_pos_absolute" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 100" preserveAspectRatio="none">
-            <polygon class="triangles_fill_grey" points="0,0 0,100 500,100 500,98"></polygon>
-            <polygon class="triangles_fill_beige" points="1000,0   1000,100   500,100   500,98"></polygon>
-          </svg>
+                  <svg class="triangles triangles_pos_absolute" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 100" preserveAspectRatio="none">
+                    <polygon class="triangles_fill_grey" points="0,0 0,100 500,100 500,98"></polygon>
+                    <polygon class="triangles_fill_beige" points="1000,0   1000,100   500,100   500,98"></polygon>
+                  </svg>
         </header>
         <div class="fullscreen-menu">
           <div class="fullscreen-menu__bg fullscreen-menu__bg_left"></div>
           <div class="fullscreen-menu__bg fullscreen-menu__bg_right"></div>
           <nav class="fullscreen-menu__nav">
-            <ul class="hide-menu__list">
-              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/works.html"><span class="title__text text_color_white">Мои работы</span></a></li>
-              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/about.html"><span class="title__text text_color_white">Обо мне</span></a></li>
-              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/blog.html"><span class="title__text text_color_white">Блог</span></a></li>
-              <li class="hide-menu__item"><a class="hide-menu__link title text_font_63" href="/index.html"><span class="title__text text_color_white">Авторизация</span></a></li>
+            <ul class="fullscreen-menu__list">
+              <li class="fullscreen-menu__item"><a class="fullscreen-menu__link title text_font_63" href="/works.html"><span class="title__text text_color_white">Мои работы</span></a></li>
+              <li class="fullscreen-menu__item"><a class="fullscreen-menu__link title text_font_63" href="/about.html"><span class="title__text text_color_white">Обо мне</span></a></li>
+              <li class="fullscreen-menu__item"><a class="fullscreen-menu__link title text_font_63" href="/blog.html"><span class="title__text text_color_white">Блог</span></a></li>
+              <li class="fullscreen-menu__item"><a class="fullscreen-menu__link title text_font_63" href="/index.html"><span class="title__text text_color_white">Авторизация</span></a></li>
             </ul>
           </nav>
         </div>
